added event type to create event page, also fixed css from last sprint in organization profile page

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/Events.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/Events.cshtml
@@ -17,6 +17,7 @@
                     <th>Event Name</th>
                     <th>Location</th>
                     <th>Description</th>
+                    <th>Event Type</th>
                     <th>Date</th>
                 </tr>
             </thead>
@@ -28,6 +29,7 @@
                         <td>@item.EventName</td>
                         <td>@item.EventLocation</td>
                         <td>@item.EventDescription</td>
+                        <td>@item.Organization.EventType1</td>
                         <td>@item.EventDate</td>
                     </tr>
                 }
