--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/OrganizationDetails.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/OrganizationDetails.cshtml
@@ -36,9 +36,9 @@
                 </div>
                 <div class="col-md-6">
                     <div class="profile-head">
-                        <h5 style="color: white;">
+                        <h6 style="color: white;">
                             @Model.OrganizationName
-                        </h5>
+                        </h6>
                         <h6 style="color: white;">
                             @Model.OrganizationLocation
                         </h6>
@@ -48,7 +48,7 @@
                                 <a style="color: white;" class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">About</a>
                             </li>
                             <li class="nav-item">
-                                <a style="color: white;" class="nav-link text-white" asp-area="" asp-controller="Organization" asp-action="Events" role="tab" aria-controls="profile" aria-selected="false">Events</a>
+                                <a style="color: white;" class="text-white" asp-area="" asp-controller="Organization" asp-action="Events" role="tab" aria-controls="profile" aria-selected="false">Events</a>
                                 @*<a class="nav-link" id="profile-tab" data-toggle="tab" href="Organization/Events" role="tab" aria-controls="profile" aria-selected="false">Events</a>*@
                             </li>
                         </ul>
