--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/CreateEvent.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/CreateEvent.cshtml
@@ -14,13 +14,13 @@
 
                     <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                     <div class="form-floating mb-3">
-                        <input asp-for="EventName" class="form-control" autocomplete="event name" aria-required="true" placeholder="Event Name" />
+                        <input asp-for="EventName" class="form-control" style="color:black" autocomplete="event name" aria-required="true" placeholder="Event Name" />
                         <label asp-for="EventName" id="eventName" style="color: black;">Event Name</label>
                         <span asp-validation-for="EventName" class="text-danger"></span>
                     </div>
 
                     <div class="form-floating mb-3">
-                        <input asp-for="EventLocation" class="form-control" autocomplete="event name" aria-required="true" placeholder="Event Location" />
+                        <input asp-for="EventLocation" class="form-control" autocomplete="event location" aria-required="true" placeholder="Event Location" />
                         <label asp-for="EventLocation" id="eventLocation" style="color: black;">Event Location</label>
                         <span asp-validation-for="EventLocation" class="text-danger"></span>
                     </div>
@@ -29,6 +29,21 @@
                         <input asp-for="EventDescription" class="form-control" autocomplete="event description" aria-required="true" placeholder="Event Description" />
                         <label asp-for="EventDescription" id="eventDescription" style="color: black;">Event Description</label>
                         <span asp-validation-for="EventDescription" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input asp-for="EventDescription" class="form-control" autocomplete="event description" aria-required="true" placeholder="Event Description" />
+                        <label asp-for="EventDescription" id="eventDescription" style="color: black;">Event Description</label>
+                        <span asp-validation-for="EventDescription" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input asp-for="EventDate" class="form-control" aria-required="true" placeholder="Event Date" style="color:black;" />
+                        <label asp-for="EventDate" id="eventDescription" style="color: black;">Event Date</label>
+                        <span asp-validation-for="EventDate" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        @Html.DropDownList("EventTypeId", (IEnumerable<SelectListItem>)ViewBag.EventType)
+                        <label asp-for="EventTypeId" id="EventTypeId" style="color: black;">Event Type </label>
+                        <span asp-validation-for="EventTypeId" class="text-danger"></span>
                     </div>
 
                     <br />
