fixed styling in CreateEvent and removed option to create event from browse

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/site.css
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/site.css
@@ -359,7 +359,7 @@ a {
 /* Event page */
 
 #hosted, #EventName, #OrganizationName {
-    color: white;
+   /* color: white;*/
 }
 
 #eventDescriptionTitle, #eventDescription, #eventLocationTitle, #eventLocation {
