Add and format edit info page, began adding functionality to controller and vm

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Index.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Index.cshtml
@@ -46,7 +46,7 @@
     <ul>
         <li style="text-align:left">
             Provide a point of access to various events in the user's local area and to other places
-            with items of necessity that aid people facing various difficulties such as food insecurity, drug addiction, or homelessness
+            with items of necessity that aid people facing various difficulties such as food insecurity, drug addiction, or homelessness.
         </li>
         <li style="text-align:left">
             Provide a way to view and keep track of information about places with items of necessities which could help the general public in learning about businesses near them, allow people to gain access to necessities, and help organizations
