--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Shared/_Layout.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                 <li>
                     <a class="nav-link" asp-area="" asp-controller="Home" asp-action="BrowsingSearch">Local Events</a>
                 </li>
+                <li>
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Organizations">Organizations</a>
+                </li>
                 @if (SignInManager.IsSignedIn(User))
                 {
                     <li class="nav-item">
