--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Browsing.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Browsing.cshtml
@@ -1,4 +1,5 @@
-﻿@model OtterProductions_CapstoneProject.Models.BrowseViewModel
+﻿﻿
+@model OtterProductions_CapstoneProject.Models.BrowseViewModel
 
 @{
     ViewData["Title"] = "Browsing Page";
