Potential fix to the login issue and user role

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Shared/_Layout.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Shared/_Layout.cshtml
@@ -39,6 +39,10 @@
                 </li>
                 @if (SignInManager.IsSignedIn(User))
                 {
+                    @*@if (UserManager.GetUserId() == ???)
+                    {
+                        
+                    }*@
                     <li class="nav-item">
                         Profile (add link)
                     </li>
