Added a new form and made it into a page, but then realized I can put it in one page. Made the form pull all the events from the name and post them in a table to show the user.

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/BrowsingSearch.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/BrowsingSearch.cshtml
@@ -4,35 +4,51 @@
     ViewData["Title"] = "Browsing Search Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Event Finder</h1>
+<body style="background-color: #15202b">
+    <div class="text-center" style="color: white">
+    <h1 class="display-4">Event Location Finder</h1>
     <p>Enter your location and we can find local events in your city</p>
     <hr />
 
     <form asp-controller="Home" asp-action="Browsing" method="post" style="text-align:left; display:inline-block;">
         <div class="form-group">
             <br />
-            @*<label for="AddressLocation">Enter your address:</label>
-            <input type="text" id="address" name="Address" value="" required>
-            <br />
-            <br />*@
             <label for="CityLocation">Enter your city:</label>
             <input type="text" id="city" name="City" value="" required>
             <br />
             <br />
             <label for="StateLocation">Enter your state (Using state abbrivations):</label>
             <input type="text" id="state" name="State" pattern="^[A-Z]{2}$" value="" required>
-            @*<br />
-            <br />
-            <label for="Zipcode">Enter your zip:</label>
-            <input type="text" id="zip" name="Zip" value="" required>
-            <br />*@
         </div>
         <br>
         <div class="mb-3">
             <button type="submit" class="btn btn-primary">Submit</button>
         </div>
     </form>
+    </div>
 
-</div>
+    <br />
+    <hr />
+    <hr />
+    <hr />
+    <br />
+
+    <div class="text-center" style="color: white">
+        <h1 class="display-4">Event Name Finder</h1>
+        <p>Enter the name of the event you're looking for and we can find all events with the matching name</p>
+        <hr />
+
+        <form asp-controller="Home" asp-action="SearchEvent" method="post" style="text-align:left; display:inline-block;">
+            <div class="form-group">
+                <br />
+                <label for="name">Enter the name of the event:</label>
+                <input type="text" id="name" name="name" value="" required>
+                <br />
+            </div>
+            <br>
+            <div class="mb-3">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </form>
+    </div>
+</body>
