--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/site.css
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/site.css
@@ -194,6 +194,18 @@ h3 {
 /*User Registration*/
 
 
+
+/* EventChoice Page */
+
+/* Create two equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px;
+}
+
+
 /*nav bar*/
 
 .navbar {
@@ -225,3 +237,5 @@ a {
 #locationName {
     color: black
 }
+
+
