--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/EditOrganization.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/EditOrganization.cshtml
@@ -5,6 +5,7 @@
 }
 <link href="~/css/profile.css" rel="stylesheet" />
 <body style="background-color: #15202b">
+    <br />
     <h2> Edit Organization</h2>
     <hr />
     <div class="row">
@@ -16,40 +17,45 @@
                 <input type="hidden" asp-for="OrganizationPicture" /> 
                 <input type="hidden" asp-for="ImageUrl" />
                 <input type="hidden" asp-for="OldEmail" />
-        
+                <br />
                 <div class="form-group">
-                    <label asp-for="Email" id="orgEmail" class="control-label"></label>
-                    <input asp-for="Email" class="form-control" />
+                    <label asp-for="Email" id="orgEmail" class="control-label">Email</label>
+                    <input asp-for="Email" class="form-control" style="color: black;" />
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
+                <br />
                 <div class="form-group">
-                    <label asp-for="OrganizationName" id="orgName" class="control-label"></label>
-                    <input asp-for="OrganizationName" class="form-control" />
+                    <label asp-for="OrganizationName" id="orgName" class="control-label">Organization Name</label>
+                    <input asp-for="OrganizationName" class="form-control" style="color: black;" />
                     <span asp-validation-for="OrganizationName" class="text-danger"></span>
                 </div>
+                <br />
                 <div class="form-group">
-                    <label asp-for="OrganizationDescription" id="orgDescription" class="control-label"></label>
-                    <input asp-for="OrganizationDescription" class="form-control" />
+                    <label asp-for="OrganizationDescription" id="orgDescription" class="control-label">Organization Description</label>
+                    <input asp-for="OrganizationDescription" class="form-control" style="color: black;" />
                     <span asp-validation-for="OrganizationDescription" class="text-danger"></span>
                 </div>
+                <br />
                 <div class="form-group">
-                    <label asp-for="OrganizationLocation" id="orgLocation" class="control-label"></label>
-                    <input asp-for="OrganizationLocation" class="form-control" />
+                    <label asp-for="OrganizationLocation" id="orgLocation" class="control-label">Organization Location</label>
+                    <input asp-for="OrganizationLocation" class="form-control" style="color: black;" />
                     <span asp-validation-for="OrganizationLocation" class="text-danger"></span>
                 </div>
+                <br />
                 <div class="form-group">
-                    <label asp-for="Address" id="orgAddress" class="control-label"></label>
-                    <input asp-for="Address" class="form-control" />
+                    <label asp-for="Address" id="orgAddress" class="control-label">Address</label>
+                    <input asp-for="Address" class="form-control" style="color: black;" />
                     <span asp-validation-for="Address" class="text-danger"></span>
                 </div>
+                <br />
                 <div class="form-group">
-                    <label asp-for="PhoneNumber" id="orgPhone" class="control-label"></label>
-                    <input asp-for="PhoneNumber" class="form-control" />
+                    <label asp-for="PhoneNumber" id="orgPhone" class="control-label">Phone Number</label>
+                    <input asp-for="PhoneNumber" class="form-control" style="color: black;" />
                     <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                 </div>
-           
+                <br />
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" style="width: 75%; background-color: #78A1BB;" />
+                    <input type="submit" value="Save" class="btn btn-primary" style="width: 75%; background-color: #78A1BB; border-color: #78A1BB;" />
                 </div>
             </form>
         </div>
