--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Users/EditInfo.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Users/EditInfo.cshtml
@@ -7,6 +7,7 @@
 @{
     ViewData["Title"] = "EditInfo";
 }
+
 <body style="background-color: #15202b;">
     <br />
     <br />
@@ -16,10 +17,11 @@
      }
 
     <h4 style="color: white;">Edit your account information below as needed</h4>
-    
+   
+    <div>@ViewBag.error</div>
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="EditInfo">
+            <form asp-action="EditInfo" method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 
                 <br />
@@ -53,6 +55,7 @@
             </form>
         </div>
     </div>
+
 </body>
 @section Scripts {
     @{
