--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/OrginzaitonEvents.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/OrginzaitonEvents.cshtml
@@ -3,8 +3,10 @@
 @{
     ViewData["Title"] = "OrginzaitonEvents";
 }
+<link href="~/css/events.css" rel="stylesheet" />
 
-<h1>OrginzaitonEvents</h1>
+<h1>Organization Events</h1>
+<p>List of events from this Organization</p>
 
 
 @if (Model != null)
