--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/events.css
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/events.css
@@ -15,3 +15,12 @@
 .form-floating mb-3 {
     background-color: black;
 }
+
+h1 {
+    color: white;
+    text-align:center;
+}
+p {
+    color: white;
+    text-align:center;
+}
