--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/profile.css
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/profile.css
@@ -24,7 +24,8 @@ h2 {
     margin-top: 3%;
     margin-bottom: 3%;
     border-radius: 0.5rem;
-    background: #22303c
+    background: #22303c;
+    display: flex;
 }
 
 .profile-img {
@@ -97,17 +98,18 @@ h2 {
     
 }
 
-    .profile-head .nav-tabs .nav-link {
-        font-weight: 600;
-        border: none;
+.profile-head .nav-tabs .nav-link {
+    font-weight: 600;
+    border: none;
+    display: flex;
+ }
 
-    }
+.profile-head .nav-tabs .nav-link.active {
+    border: none;
+    border-bottom: 2px solid #0062cc;
+    display: flex;
 
-        .profile-head .nav-tabs .nav-link.active {
-            border: none;
-            border-bottom: 2px solid #0062cc;
-
-        }
+ }
 
 .profile-work {
     padding: 14%;
