--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Users/EditInfo.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Users/EditInfo.cshtml
@@ -13,7 +13,7 @@
     <br />
     @if (SignInManager.IsSignedIn(User))
      {           
-        <h1 style="color:white;">Hello @User.Identity.Name!</h1>
+        <h1 style="color:white;">Hello!</h1>
      }
 
     <h4 style="color: white;">Edit your account information below as needed</h4>
