--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/events.css
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/events.css
@@ -2,6 +2,9 @@
     background-color: #15202b
 }
 
+h1 {
+    color:white;
+}
 .pb-3{
     background-color: #22303c;
 }
@@ -11,7 +14,29 @@
 
 .nav-link {
     color: white;
+
 }
 .form-floating mb-3 {
     background-color: black;
 }
+
+.search-button {
+    padding: 10px 20px;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    text-decoration: none;
+    display: inline-block;
+}
+
+    .search-button.dark-background {
+        color: #fff;
+    }
+
+    .search-button:hover {
+        background-color: #2980b9;
+    }
+
+
+
