--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Browsing.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Browsing.cshtml
@@ -39,6 +39,15 @@
                                     <td>@events.EventLocation</td>
                                     <td>@events.EventDescription</td>
                                     <td>@DateOnly.FromDateTime(events.EventDate)</td>
+                                    <td> <form asp-controller="Home" asp-action="UserPage" method="post">
+                                            <div class="form-group">
+                                                <input hidden="hidden" asp-for="eventId" type="text" id="eventId" name="id" value="@events.Id">
+                                            
+                                            </div>
+
+                                            <input type="submit" id="submitBrowsing" value="Save Event"/>
+                                        </form>
+                                    </td>
                                     @*Grabs the organization info based on the event Organizations ID*@
     @*                                @if (Model.Organizations != null)
                                     {
