--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/UserPage.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/UserPage.cshtml
@@ -10,8 +10,11 @@
 @inject UserManager<ApplicationUser> UserManager
 
 <div>
-    <h1>Hello @UserManager.GetUserName(User)!</h1>
+    <h1 id="EventName">Hello @UserManager.GetUserName(User)!</h1>
 </div>
+
+<br />
+<br />
 
 <div class="list-group">
     @if (Model.EventList is null)
@@ -20,7 +23,36 @@
     }
     else
     {
-        foreach (var i in Model.EventList)
+
+
+        <h2 id="browsingTitle">Saved Events</h2>
+        <table class="table table-sm" id="logTable">
+            <thead>
+                <tr>
+                    <th scope="col">Event Name</th>
+                    <th scope="col">Event Location</th>
+                    <th scope="col">Event Date</th>
+                    <th scope="col">Event Description</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                
+                @foreach (var i in Model.EventList)
+                {
+                    <tr>
+
+                        <td><a asp-area="" asp-controller="Home" asp-action="EventPage" asp-route-id="@i.Id" id="locationName">@i.EventName</a></td>
+                    <td>@i.EventLocation</td>
+                    <td> @i.EventDate</td>
+                    <td>@i.EventDescription</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+
+@*        foreach (var e in Model.EventList)
         {
             <ul class="list-group list-group-horizontal">
                 <a href="#"></a><li class="list-group-item list-group-item-action">@i.EventName</li>
@@ -29,7 +61,7 @@
                 <li class="list-group-item">@i.EventDescription</li>
 
             </ul>
-        }
+        }*@
     }
     
 
