changed header and paragraph tag for event page

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Organizations.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Organizations.cshtml
@@ -4,8 +4,8 @@
 }
 <link href="~/css/events.css" rel="stylesheet" />
 
-<h1>Organizations</h1>
-<p>The list of Organizations registered in our site</p>
+<h1>Explore Organizations</h1>
+<p>Find and Engage with Registered Organizations on Our Site</p>
 
 
 
