fixed map problems

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Map/Mappage.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Map/Mappage.cshtml
@@ -16,7 +16,7 @@
     <div>
         <p style="color: white;margin-left: 150px;">Type in an Address or City</p>
     </div>
-    <input id="mapAddressInput" type="text" placeholder="@Model.location" style="margin-left: 150px; color: black;"value="@Model.location">
+    <input id="location" type="text" placeholder="@Model.location" style="margin-left: 150px; color: black;"value="@Model.location">
     <input id="submitButton" type="button" value="Submit" class="btn btn-primary" style="margin-right: 10px;"></>
         <button type="button" class="btn btn-secondary" id="locationButton">Click here to get your location</button>
     <br />
@@ -69,7 +69,7 @@
     and consistent behavior across browsers, consider loading using Promises
     with https://www.npmjs.com/package/@googlemaps/js-api-loader.
     -->*@
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCIiPJAz4KApQsWr71OlZXjZczcaRQitk&callback=initMap&libraries=places&v=weekly"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfIlowOJLOtRJduvUraHSk8WOJjUkB3Eo&callback=initMap&libraries=places&v=weekly"
             defer
 
     ></script>
